tp17/tp17-3-fluxcd-gitlab/apps/petstore/namespaces.yaml
# https://kubernetes.io/docs/tasks/administer-cluster/namespaces-walkthrough/
kind: Namespace  
apiVersion: v1  
metadata:  
 name: petstore 
 labels:  
   name: petstore
